--- a/charles_monitor.service
+++ b/charles_monitor.service
@@ -3,6 +3,7 @@ Description=Server that keeps the Charles system up to date and provides necessa
 
 [Service]
 WorkingDirectory=/home/admin/Charles/
+Environment='PA_ALSA_PLUGHW=1'
 ExecStart=/usr/local/bin/flask --app /home/admin/Charles/start_server.py run --debug --host=0.0.0.0
 Restart=always
 # Restart service after 10 seconds if the dotnet service crashes:
